fix: [EC-126] fix height of collapsed container and role models text

--- a/src/pages/home-chef/index.module.scss
+++ b/src/pages/home-chef/index.module.scss
@@ -166,6 +166,7 @@
   &__empty {
     position: relative;
     left: -20px;
+    min-width: max-content;
   }
 
   &__next {
